--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,6 +3,7 @@
 
 .header {
   padding: 0 0 0 3rem;
+  z-index: 1000;
   background-color: var(--color-background);
   font-size: 3.5rem;
   line-height: 1.3;
