--- a/src/components/shared/sy-button/SyButton.module.scss
+++ b/src/components/shared/sy-button/SyButton.module.scss
@@ -1,7 +1,7 @@
 .button {
   padding: 0.5rem 1rem;
   font-size: 2rem;
-  z-index: 2;
+  z-index: 5;
   cursor: pointer;
   background-color: var(--color-background);
   transition: background-color 0.2s ease-in-out;
